@startuml

title __SET's Class Diagram__\n

  package set {
    class SetArray {
        - DEFSIZE : int
        - elements : Elem<?>[]
        - positions : Pos<Integer>[]
        - elemSize : int
        - posSize : int
        + counter : long
        + SetArray()
        + SetArray()
        + add()
        + delete()
        + delete()
        + find()
        + retrieve()
        + showall()
        + size()
        {static} + unify()
        + retrieveAll()
    }
  }
  

  package set {
    class SetContainer {
        - DEFSIZE : int
        - positions : Pos<Node>[]
        - posSize : int
        + counter : long
        + SetContainer()
        + SetContainer()
        + add()
        + delete()
        + delete()
        + find()
        + retrieve()
        + retrieveAll()
        + showall()
        + size()
        {static} + unify()
    }
  }
  

  package set {
    class SetContainerArray {
        - DEFSIZE : int
        - positions : Pos<?>[]
        - posSize : int
        - elemSize : int
        + counter : long
        + SetContainerArray()
        + SetContainerArray()
        + add()
        + delete()
        + delete()
        + find()
        + retrieve()
        + retrieveAll()
        + showall()
        + size()
        {static} + unify()
    }
  }
  

  package set {
    interface SetInterface {
        {abstract} + add()
        {abstract} + delete()
        {abstract} + delete()
        {abstract} + find()
        {abstract} + retrieve()
        {abstract} + retrieveAll()
        {abstract} + showall()
        {abstract} + size()
        {static} + unify()
    }
  }
  

  SetArray -up-|> SetInterface
  SetContainer -up-|> SetInterface
  SetContainer o-- Node : head
  SetContainer o-- Node : tail
  SetContainerArray -up-|> SetInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
